swiper div z-index adjust to fix a bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -414,6 +414,10 @@ img {
   text-align: center;
 }
 
+.swiper-pagination {
+  z-index: 0 !important;
+}
+
 .swiper-pagination-bullet-active{
   background-color: var(--main-color);
 }
